--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
         <title>
             AmongUs Mod Apk.
         </title>
-        <link rel="stylesheet" href="INDEX.css">
+        <link rel="stylesheet" href="index.css">
     </head>
     <body style="background-color: black; color: white;">
         <!--Intro start-->
