--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <!--DOWNLOAD BUTTON START-->
 
         <div class="button">
-            <h1><a href="https://an1.com/6553-among-us-mod.html" target="_blank">DOWNLOAD</a></h1>
+            <h1><a href="https://www.mediafire.com/file/tblakclxroz16tj/Among_us_mod_v2.apk/file" target="_blank">DOWNLOAD</a></h1>
         </div>
         <!--DOWNLOAD BUTTON END-->
     </body>
